<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_capture"
            android:icon="@drawable/nav_capture"
            android:title="@string/function_attendance" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/nav_register"
            android:title="@string/function_register" />
        <item
            android:id="@+id/nav_management"
            android:icon="@drawable/nav_management"
            android:title="@string/function_management"
            android:visible="false" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/nav_settings"
            android:title="@string/function_settings" />
    </group>
</menu>