<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/detail_phone_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/information_detail_phone"
            android:textColor="@color/grayPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/detail_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/grayPrimary"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail_department_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_phone_layout"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/information_detail_department"
            android:textColor="@color/grayPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/detail_department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/grayPrimary"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail_post_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_department_layout"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/information_detail_post"
            android:textColor="@color/grayPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/detail_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/grayPrimary"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail_email_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_post_layout"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/information_detail_email"
            android:textColor="@color/grayPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/detail_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/grayPrimary"
            android:textSize="16sp" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/detail_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="13dp"
        android:layout_marginRight="10dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_edit" />

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_below="@+id/detail_email_layout" />

</RelativeLayout>